--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ td { text-align: center; padding: 25;}
 <center>
 <br><br><br><br>
 <table>
-<tr><td>This is a placthe bdain <b>s001.otmakhov.pro</b></td></tr>
+<tr><td>This is a  bdain </td></tr>
 </table>
 <br><br>
 </center>
